--- a/kong/kong_cassandra.yaml
+++ b/kong/kong_cassandra.yaml
@@ -39,6 +39,7 @@ metadata:
 spec:
   type: LoadBalancer
   loadBalancerSourceRanges:
+    #for prod limit this to /24 or /36
   - 0.0.0.0/0
   ports:
   - name: kong-admin
@@ -56,6 +57,7 @@ metadata:
 spec:
   type: LoadBalancer
   loadBalancerSourceRanges:
+    #for prod limit this to /24 or /36
   - 0.0.0.0/0
   ports:
   - name: kong-admin-ssl
